Configurando o EF Core

--- a/WebApplicationHamburgueriaMvc/appsettings.json
+++ b/WebApplicationHamburgueriaMvc/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=RAFAEL\\SQLEXPRESS;Initial Catalog=db_hamburgueria;Integrated Security=true;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
