--- a/WebApplicationHamburgueriaMvc/appsettings.json
+++ b/WebApplicationHamburgueriaMvc/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=RAFAEL\\SQLEXPRESS;Initial Catalog=db_hamburgueria;Integrated Security=true;"
+    "DefaultConnection": "Data Source=RAFAEL\\SQLEXPRESS;Initial Catalog=db_hamburgueria;Integrated Security=true;TrustServerCertificate=True"
   },
   "Logging": {
     "LogLevel": {
