feat: configurando/criando a infraestrutura de arquivos p/ gerenciamento de imagens

--- a/WebApplicationHamburgueriaMvc/appsettings.json
+++ b/WebApplicationHamburgueriaMvc/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConfigurationPastaImagens": {
+    "NomePastaImagensProdutos" :  "images/produtos"
+  },
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=RAFAEL\\SQLEXPRESS;Initial Catalog=db_hamburgueria;Integrated Security=true;TrustServerCertificate=True"
   },
