--- a/WebApplicationHamburgueriaMvc/WebApplicationHamburgueriaMvc.csproj
+++ b/WebApplicationHamburgueriaMvc/WebApplicationHamburgueriaMvc.csproj
@@ -9,7 +9,7 @@
   <ItemGroup>
     <Folder Include="Areas\Admin\Data\" />
     <Folder Include="Areas\Admin\Models\" />
-    <Folder Include="wwwroot\images\" />
+    <Folder Include="wwwroot\images\produtos\" />
   </ItemGroup>
 
   <ItemGroup>
